fixed uneven links at footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@ body {
   color: white;
   
    background: rgb(45, 15, 15);
-
+  justify-content:center ;
  }
 
 .nav {
